--- a/exchange_calculator.html
+++ b/exchange_calculator.html
@@ -18,7 +18,7 @@
         <h2>
             from
         </h2>
-        <input type="number" id="number_one">
+        <input type="number" id="number_one" placeholder="Inserisci i soldi...">
         <select name="currency_to_start" id="currency_to_start">
             <option value="EUR">EUR</option>
             <option value="USD">USD</option>
@@ -72,3 +72,4 @@
     </body>
 
 </html>
+
